--- a/index.html
+++ b/index.html
@@ -6,6 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script>
+	const cueFile1 = `REM GENRE R&B
+REM DATE 2016
+REM DISCID 720CEB0A
+REM COMMENT "ExactAudioCopy v1.1"
+PERFORMER "Michael Kiwanuka"
+TITLE "Love And Hate"
+FILE "Michael Kiwanuka - Love And Hate.flac" WAVE
+  TRACK 01 AUDIO
+    TITLE "Cold Little Heart"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 00:00:00
+  TRACK 02 AUDIO
+    TITLE "Black Man In A White World"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 00 09:58:54
+    INDEX 01 10:10:36
+  TRACK 03 AUDIO
+    TITLE "Falling"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 14:29:33
+  TRACK 04 AUDIO
+    TITLE "Place I Belong"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 18:46:24
+  TRACK 05 AUDIO
+    TITLE "Love And Hate"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 23:33:63
+  TRACK 06 AUDIO
+    TITLE "One More Night"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 30:40:70
+  TRACK 07 AUDIO
+    TITLE "I'll Never Love"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 34:34:26
+  TRACK 08 AUDIO
+    TITLE "Rule The World"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 37:20:25
+  TRACK 09 AUDIO
+    TITLE "Father's Child"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 01 43:03:12
+    INDEX 02 50:06:41
+  TRACK 10 AUDIO
+    TITLE "The Final Frame"
+    PERFORMER "Michael Kiwanuka"
+    INDEX 00 50:06:41
+    INDEX 01 50:08:23
+`;
+      (async () => {
+        fetch("./better-cue-parser.0.3.1.min.js")
+        .then(data => data.text())
+        .then(async jsCode => {
+          eval(jsCode); // imagejs is declared
+          if (!!betterCueParser) {
+			const cueSheet = betterCueParser.parse(cueFile1);
+			cueSheet.files[0].tracks.forEach(track => {
+				console.log(`${track.title} ${track.indexes.map(index => JSON.stringify(index.time)).join(",")} `);
+			})
+			debugger;
+          }
+        })
+      })();
+    </script>
 </body>
 </html>
