--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<a href="https://github.com/dirkarnez/cue-parser-playground" target="_blank">dirkarnez/cue-parser-playground</a><br>
 	<input type="file" id="file-input">
 	<button id="btn-demo">Demo</button>
 	<script>
