--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 	<a href="https://github.com/dirkarnez/cue-studio" target="_blank">dirkarnez/cue-studio</a><br>
 	<input type="file" id="file-input">
-	<button id="btn-demo">Demo</button>
+	<button class="btn btn-primary" id="btn-demo">Demo</button>
 	<script>
 		const cueFile1 = `REM GENRE R&B
 REM DATE 2016
